--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -1,14 +1,39 @@
 server {
-    listen 80;
+    listen 443 ssl;
+    server_name _;
 
+    # SSL Sertifikası ve Anahtar
+    ssl_certificate /etc/nginx/ssl/selfsigned.crt;
+    ssl_certificate_key /etc/nginx/ssl/selfsigned.key;
+
+    # Diffie-Hellman parametresi (Opsiyonel)
+    ssl_dhparam /etc/nginx/ssl/dhparam.pem;
+
+    # SSL Ayarları
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers HIGH:!aNULL:!MD5;
+    ssl_prefer_server_ciphers on;
+
+    # SPA ve Statik Dosyalar
     location / {
+        root /var/www/html;  # Dockerfile'daki yol ile tutarlı hale getirildi
+        index index.html;
+        try_files $uri /index.html;
+    }
+
+    # API İstekleri için Proxy
+    location /api/ {
         proxy_pass http://backend:8000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
+}
 
-    location /static/ {
-        alias /app/static/;
-    }
+server {
+    listen 80;
+    server_name _;
+
+    # HTTP'den HTTPS'ye yönlendirme
+    return 301 https://$host$request_uri;
 }
