--- a/app/nginx/nginx.conf
+++ b/app/nginx/nginx.conf
@@ -21,7 +21,7 @@ http {
         ssl_certificate_key /etc/ssl/private/certificate.key;
 
         location / {
-            proxy_pass http://frontend:80;
+            proxy_pass http://frontend_service:80;
             proxy_redirect off;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -30,7 +30,7 @@ http {
         }
 
         location /api/ {
-            proxy_pass http://auth:8000;
+            proxy_pass http://auth_service:8000;
             proxy_redirect off;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -39,7 +39,7 @@ http {
         }
 
         location /game/ {
-            proxy_pass http://game:8000;
+            proxy_pass http://game_service:8000;
             proxy_redirect off;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -48,7 +48,7 @@ http {
         }
 
         location /tournament/ {
-            proxy_pass http://game:8000;
+            proxy_pass http://game_service:8000;
             proxy_redirect off;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -59,7 +59,7 @@ http {
 
        
         location /ws/status/ {
-            proxy_pass http://auth:8000;
+            proxy_pass http://auth_service:8000;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "Upgrade";
@@ -74,7 +74,7 @@ http {
 
 		
         location /ws/tournament/ {
-            proxy_pass http://game:8000;
+            proxy_pass http://game_service:8000;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "Upgrade";
@@ -88,7 +88,7 @@ http {
         }
 
         location /ws/game/ {
-            proxy_pass http://game:8000;
+            proxy_pass http://game_service:8000;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "Upgrade";
