--- a/requirements/docker-compose.yml
+++ b/requirements/docker-compose.yml
@@ -9,13 +9,13 @@ services:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
     volumes:
-      - ../app/postgres:/var/lib/postgresql/data
+      - ../app/postgres_data:/var/lib/postgresql/data
     networks:
       - default
 
   auth:
     build: ../app/auth
-    container_name: auth
+    container_name: auth_service
     ports:
       - "8001:8000" # Host:Container Port
     environment:
@@ -30,13 +30,13 @@ services:
     networks:
       - default
 
-  frontend:
-    build: ../app/frontend
-    container_name: frontend
+  front:
+    build: ../app/front
+    container_name: frontend_service
     ports:
       - "3000:80"
     volumes:
-      - ../app/frontend:/usr/share/nginx/html
+      - ../app/front:/usr/share/nginx/html
       - ../app/qrdata:/usr/share/nginx/html/qrdata
     depends_on:
       - auth
@@ -45,7 +45,7 @@ services:
 
   nginx:
     build: ../app/nginx
-    container_name: nginx
+    container_name: nginx_server
     ports:
       - "80:80"
       - "443:443"
@@ -54,13 +54,13 @@ services:
       - ../app/nginx/ssl/certificate.pem:/etc/ssl/certs/certificate.pem
       - ../app/nginx/nginx.conf:/etc/nginx/nginx.conf
     depends_on:
-      - frontend
+      - front
     networks:
       - default
 
   redis:
     image: redis:alpine
-    container_name: redis
+    container_name: redis_server
     ports:
       - "6379:6379"
     networks:
@@ -68,7 +68,7 @@ services:
 
   game:
     build: ../app/pingpong
-    container_name: game
+    container_name: game_service
     ports:
       - "8003:8000"
     environment:
@@ -83,7 +83,7 @@ services:
       - default
 
 volumes:
-  postgres:
+  postgres_data:
   qrdata:
 
 networks:
