--- a/app/nginx/nginx.conf
+++ b/app/nginx/nginx.conf
@@ -13,6 +13,14 @@ http {
         }
     }
 
+    include       mime.types;
+    default_type  application/octet-stream;
+
+    types {
+        text/javascript  js;  # JS dosyaları için doğru MIME tipi
+        application/json json; # JSON dosyaları için doğru MIME tipi
+    }
+
     server {
         listen 443 ssl;
         server_name 176.41.7.226;
@@ -21,16 +29,13 @@ http {
         ssl_certificate_key /etc/ssl/private/certificate.key;
 
         location / {
-            proxy_pass http://frontend_service:80;
-            proxy_redirect off;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
+            root /usr/share/nginx/html;
+            index index.html;
+            try_files $uri $uri/ /index.html;
         }
 
         location /api/ {
-            proxy_pass http://auth_service:8000;
+            proxy_pass http://auth-docker:8000;
             proxy_redirect off;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -39,7 +44,7 @@ http {
         }
 
         location /game/ {
-            proxy_pass http://game_service:8000;
+            proxy_pass http://game-docker:8000;
             proxy_redirect off;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -48,7 +53,7 @@ http {
         }
 
         location /tournament/ {
-            proxy_pass http://game_service:8000;
+            proxy_pass http://game-docker:8000;
             proxy_redirect off;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -56,10 +61,8 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-
-       
         location /ws/status/ {
-            proxy_pass http://auth_service:8000;
+            proxy_pass http://auth-docker:8000;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "Upgrade";
@@ -72,9 +75,8 @@ http {
             proxy_send_timeout 86400s;
         }
 
-		
         location /ws/tournament/ {
-            proxy_pass http://game_service:8000;
+            proxy_pass http://game-docker:8000;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "Upgrade";
@@ -88,7 +90,7 @@ http {
         }
 
         location /ws/game/ {
-            proxy_pass http://game_service:8000;
+            proxy_pass http://game-docker:8000;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "Upgrade";
