--- a/requirements/docker-compose.yml
+++ b/requirements/docker-compose.yml
@@ -1,21 +1,19 @@
-version: "3.8"
-
 services:
   db:
     image: postgres:alpine
-    container_name: db
+    container_name: db-docker
     environment:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
     volumes:
-      - ../app/postgres_data:/var/lib/postgresql/data
+      - ../app/postgres:/var/lib/postgresql/data
     networks:
       - default
 
   auth:
     build: ../app/auth
-    container_name: auth_service
+    container_name: auth-docker
     ports:
       - "8001:8000" # Host:Container Port
     environment:
@@ -30,22 +28,10 @@ services:
     networks:
       - default
 
-  front:
-    build: ../app/front
-    container_name: frontend_service
-    ports:
-      - "3000:80"
-    volumes:
-      - ../app/front:/usr/share/nginx/html
-      - ../app/qrdata:/usr/share/nginx/html/qrdata
-    depends_on:
-      - auth
-    networks:
-      - default
-
   nginx:
-    build: ../app/nginx
-    container_name: nginx_server
+    build:
+      context: ../app/nginx
+    container_name: nginx-docker
     ports:
       - "80:80"
       - "443:443"
@@ -53,22 +39,16 @@ services:
       - ../app/nginx/ssl/certificate.key:/etc/ssl/private/certificate.key
       - ../app/nginx/ssl/certificate.pem:/etc/ssl/certs/certificate.pem
       - ../app/nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ../app/frontend:/usr/share/nginx/html
+      - ../app/qrdata:/usr/share/nginx/html/qrdata
     depends_on:
-      - front
+      - auth
     networks:
       - default
 
-  redis:
-    image: redis:alpine
-    container_name: redis_server
-    ports:
-      - "6379:6379"
-    networks:
-      - default
-
-  game:
+  game-docker:
     build: ../app/pingpong
-    container_name: game_service
+    container_name: game-docker
     ports:
       - "8003:8000"
     environment:
@@ -83,7 +63,7 @@ services:
       - default
 
 volumes:
-  postgres_data:
+  postgres:
   qrdata:
 
 networks:
